--- a/manifest.json
+++ b/manifest.json
@@ -1,13 +1,10 @@
 {
   "manifest_version": 3,
-  "name": "GeoBlocker",
-  "description": "Blocks YouTube videos from selected regions.",
-  "version": "2.0.0",
-  "permissions": [
-    "storage",
-    "scripting"
-  ],
+  "name": "YouTube GeoFilter",
+  "version": "1.0",
+  "permissions": ["storage"],
   "host_permissions": [
+    "https://www.googleapis.com/*",
     "https://www.youtube.com/*"
   ],
   "action": {
@@ -18,9 +15,8 @@
   },
   "content_scripts": [
     {
-      "matches": ["*://www.youtube.com/*"],
-      "js": ["content.js"],
-      "run_at": "document_idle"
+      "matches": ["https://www.youtube.com/*"],
+      "js": ["content.js"]
     }
   ]
 }
